--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,4 +21,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'admin/admin.scss';
 @import 'home/home.scss';
 @import 'modal/modal.scss';
+@import 'dashboard/dashboard.scss'
 // endinjector
