--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl as navbarCtrl">
   <div class="container">
     <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="navbarCtrl.isCollapsed = navbarCtrl.!isCollapsed">
+      <button class="navbar-toggle" type="button" ng-click="navbarCtrl.isCollapsed = !navbarCtrl.isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
