--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import '_colors.scss';
 @import 'account/login/login.scss';
+@import 'account/signup/signup.scss';
 @import 'admin/admin.scss';
 @import 'dashboard/dashboard.scss';
 @import 'home/home.scss';
