--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'account/signup/signup.scss';
 @import 'admin/admin.scss';
+@import 'dashboard/addEventModal.scss';
 @import 'dashboard/dashboard.scss';
 @import 'home/home.scss';
 // endinjector
