--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -17,11 +17,15 @@
         <li ng-show="navbarCtrl.isAdmin()" ng-class="{active: $state.includes('admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
+      <ul class="nav navbar-nav navbar-left">
+        <li ng-show="navbarCtrl.isDashboard"><a ui-sref="dashboard.events">My Events</a></li>
+        <li ng-show="navbarCtrl.isDashboard"><a ui-sref="dashboard.beacons">My Beacons</a></li>
+      </ul>
+
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('signup')}"><a href="/signup">Sign up</a></li>
         <li ng-hide="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('login')}"><a href="/login">Login</a></li>
-        <li ng-show="navbarCtrl.isLoggedIn"><p class="navbar-text">Hello {{ navbarCtrl.email }}</p> </li>
-        <li ng-show="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
+        <li ng-show="navbarCtrl.isLoggedIn"><p style="padding-top: 2px" class="navbar-text">Hello {{ navbarCtrl.email }}</p> </li>
         <li ng-show="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('logout')}"><a href="" ng-click="navbarCtrl.logout()">Logout</a></li>
       </ul>
     </div>
