--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -14,7 +14,7 @@
         <li ng-repeat="item in navbarCtrl.menu" ng-class="{active: $state.includes('item.link')}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
-        
+
       </ul>
 
       <ul class="nav navbar-nav navbar-left">
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('signup')}"><a href="/signup">Sign up</a></li>
         <li ng-hide="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('login')}"><a href="/login">Login</a></li>
+        <li ng-show="navbarCtrl.isLoggedIn"><a style="padding-top: 2px" ui-sref="dashboard">My Dashboard</a></li>
         <li ng-show="navbarCtrl.isLoggedIn"><p style="padding-top: 2px" class="navbar-text">Hello {{ navbarCtrl.email }}</p> </li>
         <li ng-show="navbarCtrl.isLoggedIn" ng-class="{active: $state.includes('logout')}"><a href="" ng-click="navbarCtrl.logout()">Logout</a></li>
       </ul>
