--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -25,4 +25,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'dashboard/addEventModal.scss';
 @import 'dashboard/dashboard.scss';
 @import 'home/home.scss';
+@import 'user-registration/user-registration.scss';
 // endinjector
