--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -24,5 +24,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'dashboard/addBeaconModal.scss';
 @import 'dashboard/addEventModal.scss';
 @import 'dashboard/dashboard.scss';
+@import 'dashboard/myBeacons.scss';
 @import 'home/home.scss';
 // endinjector
