--- a/client/app/dashboard/dashboard.scss
+++ b/client/app/dashboard/dashboard.scss
@@ -1,7 +1,24 @@
 .eventCard{
   background: f00;
 }
-
+.addNewEventCard{
+  background:$secondaryAccentOrange;
+  height: 175px;
+  width: 94%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6px;
+  margin-left: 12px;
+  margin-right: 2px;
+}
+.newEventSpan{
+  background:$secondaryAccentOrange;
+}
+.newEvent{
+  color: white;
+}
 .md-headline{
   //position: relative;
 
