--- a/client/app/dashboard/myBeacons.scss
+++ b/client/app/dashboard/myBeacons.scss
@@ -18,3 +18,7 @@
 .col-no-padding{
   padding: 0 !important;
 }
+.topbar{
+  background-color: $secondaryAccentOrange !important;
+  color: white;
+}
